// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionSelect component should render all actions for system rules 1`] = `
<UncontrolledButtonDropdown
  className="ActionSelect"
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="mr-1"
    color="secondary"
    type="button"
  >
    Add tags
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    tag="div"
  >
    <DropdownItem
      key="0"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Deliver message
    </DropdownItem>
    <DropdownItem
      key="1"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Send email
    </DropdownItem>
    <DropdownItem
      key="2"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Reply to ticket
    </DropdownItem>
    <DropdownItem
      key="3"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Apply macro
    </DropdownItem>
    <DropdownItem
      key="4"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Add tags
    </DropdownItem>
    <DropdownItem
      key="5"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Set tags
    </DropdownItem>
    <DropdownItem
      key="6"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Set subject
    </DropdownItem>
    <DropdownItem
      key="7"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Set status
    </DropdownItem>
    <DropdownItem
      key="8"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Snooze for 
    </DropdownItem>
    <DropdownItem
      key="9"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Assign agent
    </DropdownItem>
    <DropdownItem
      key="10"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Assign team
    </DropdownItem>
    <DropdownItem
      key="11"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Delete ticket
    </DropdownItem>
    <DropdownItem
      key="12"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Hide Facebook comment
    </DropdownItem>
    <DropdownItem
      key="13"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Like Facebook comment
    </DropdownItem>
  </DropdownMenu>
</UncontrolledButtonDropdown>
`;

exports[`ActionSelect component should render all non-system actions for non-system rules 1`] = `
<UncontrolledButtonDropdown
  className="ActionSelect"
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="mr-1"
    color="secondary"
    type="button"
  >
    Add tags
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    tag="div"
  >
    <DropdownItem
      key="1"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Send email
    </DropdownItem>
    <DropdownItem
      key="2"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Reply to ticket
    </DropdownItem>
    <DropdownItem
      key="3"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Apply macro
    </DropdownItem>
    <DropdownItem
      key="4"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Add tags
    </DropdownItem>
    <DropdownItem
      key="5"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Set tags
    </DropdownItem>
    <DropdownItem
      key="6"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Set subject
    </DropdownItem>
    <DropdownItem
      key="7"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Set status
    </DropdownItem>
    <DropdownItem
      key="8"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Snooze for 
    </DropdownItem>
    <DropdownItem
      key="9"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Assign agent
    </DropdownItem>
    <DropdownItem
      key="10"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Assign team
    </DropdownItem>
    <DropdownItem
      key="11"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Delete ticket
    </DropdownItem>
    <DropdownItem
      key="12"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Hide Facebook comment
    </DropdownItem>
    <DropdownItem
      key="13"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Like Facebook comment
    </DropdownItem>
  </DropdownMenu>
</UncontrolledButtonDropdown>
`;
